--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "eslint-plugin-vue": "^7.7.0",
     "fibers": "^5.0.0",
     "sass": "^1.32.13",
-    "sass-loader": "^10.2.0",
-    "simplegrid": "^1.0.2"
+    "sass-loader": "^10.2.0"
   }
 }
