--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "nuxt-i18n": "^6.27.0"
+    "nuxt-i18n": "^6.27.0",
+    "vueperslides": "^2.15.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
