--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "vueperslides": "^2.15.2"
   },
   "devDependencies": {
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.2.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "fibers": "^5.0.1",
+    "postcss": "^8.4.7",
     "sass": "^1.49.9",
     "sass-loader": "^10.2.1"
   }
