--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.0.96",
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
