Change environment load

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,9 +9,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Build and Push
-    env:
-      NUXT_ENV_GITHUB_TOKEN: ${{ secrets.NUXT_ENV_GITHUB_TOKEN }}
+
     steps:
+      - name: set-environment-variables
+        env:
+          NUXT_ENV_GITHUB_TOKEN: ${{ secrets.NUXT_ENV_GITHUB_TOKEN }}
+
       - name: git-checkout
         uses: actions/checkout@v2
 
