--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@mdi/js": "^7.0.96",
     "axios": "^0.21.1",
     "nuxt": "^3.0.0",
-    "nuxt-i18n": "^6.27.0",
-    "vueperslides": "^2.15.2"
+    "vueperslides": "^3.5.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/i18n": "^8.0.0-beta.7",
+    "vue-i18n": "^9.2.2"
   }
 }
