--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.7",
+    "@nuxtjs/tailwindcss": "^6.2.0",
     "vue-i18n": "^9.2.2"
   }
 }
