--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.3",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "vue-i18n": "^9.2.2"
   }
