--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "nuxt-purgecss": "^2.0.0",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
-    "typescript": "^4.9.4",
-    "vue-i18n": "^9.2.2"
+    "typescript": "^4.9.4"
   }
 }
