--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "nuxt-delay-hydration": "^1.1.0",
     "nuxt-purgecss": "^2.0.0",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
