--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,9 +6,9 @@ on:
       - master
 
 env:
-  NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
   NUXT_TARGET_EMAIL: ${{ secrets.NUXT_TARGET_EMAIL }}
   NUXT_SERVICE_MAILER_URL: ${{ secrets.NUXT_SERVICE_MAILER_URL }}
+  NUXT_REPOS_LISTER_URL: ${{ secrets.NUXT_REPOS_LISTER_URL }}
 
 jobs:
   build:
