--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,15 +25,9 @@ jobs:
       - name: Build
         run: npm run generate # The build command of your project
 
-      - name: Push
+      - name: Push assets to branch
         run: |
-          git checkout -b build # Create and switch to a new branch
+          git checkout -b build # Create and switch to a new branch named "build"
           git add dist/ # Add the assets to the Git index
           git commit -m "Build: ({sha}) {msg}" # Commit the changes with a custom commit message
           git push origin build # Push the changes to the "build" branch on GitHub
-        env:
-          REPO: self
-          BRANCH: build # The branch name where you want to push the assets
-          FOLDER: dist # The directory where your assets are generated
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
-          MESSAGE: "Build: ({sha}) {msg}" # The commit message
