--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,10 +20,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install all dependencies
-        run: npm install
+        run: yarn
 
       - name: Build
-        run: npm run generate # The build command of your project
+        run: yarn generate # The build command of your project
 
       - name: Push
         uses: s0/git-publish-subdir-action@develop
