--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@jogarcia/mgrid": "^0.1.0",
     "@mdi/js": "^7.0.96",
-    "nuxt": "^3.4.3"
+    "nuxt": "^3.4.3",
+    "zdog": "^1.1.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
